@@ -23,12 +23,6 @@ In your `Makefile.PL`:
       ...
     );
 
-# NOTICE
-
-This will not yet work on Windows. However, it should function properly on
-linux and unix platforms. We will be working hard to make things behave on
-Windows as soon as possible.
-
 # DESCRIPTION
 
 This package can be used by other [CPAN](https://metacpan.org) modules that
@@ -37,6 +31,10 @@ require [libuv](http://libuv.org).
 # AUTHOR
 
 Chase Whitener <`capoeirab@cpan.org`>
+
+# CONTRIBUTORS
+
+Graham Ollis <`plicease@cpan.org`>
 
 # COPYRIGHT & LICENSE
 
